--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Perfect Pizza</h1>
+ <div class="container">
     <div class="pizzas small_pizza">
         <h2>Small Pizza</h2>
         <img src="pizza slice.png" width="180">
@@ -37,9 +38,13 @@
             Any flavour.
         </div>
     </div>
+ </div> /* container */
+
     <div class="pizza contact_details">
+        <div>
         <h2>Contact Details</h2>
-        <div>   Tel: 016 856 1122
+        </div>
+        <div>  Tel: 016 856 6321
         </div>
         <div>
             email: pizzaperfect@home.com
