--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Perfect Pizza</h1>
+    <h1>Pizza Perfect</h1>
  <div class="container">
     <div class="pizzas small_pizza">
         <h2>Small Pizza</h2>
@@ -38,7 +38,7 @@
             Any flavour.
         </div>
     </div>
- </div> /* container */
+ </div>
 
     <div class="pizza contact_details">
         <div>
